[Catalog] Text colour and modal-chip alignment issue #962

--- a/_sass/catalog.scss
+++ b/_sass/catalog.scss
@@ -455,28 +455,36 @@ input[type="checkbox"] {
   }
 }
 .modal-pattern-name {
-  color: #333;
-  text-align: center;
-  font-weight: 800;
+  color: var(--color-secondary-light);
+  width: calc(80%);
+  text-overflow: ellipsis;
+  margin: auto;
   font-size: 12px;
   white-space: nowrap;
-  padding-top: 7px;
+  text-align: center;
+  font-weight: 800;
+  overflow: hidden;
+  padding: 15px 0 15px 0;
 }
 .modal-chip {
   display: inline-flex;
   flex-direction: row-reverse;
+  justify-items: end;
+  margin-right: -20px;
+  margin-top: -20px;
+  overflow: hidden;
   float: right;
-  background-color: #b6d7a8ff;
+  background-color: var(--brand-color-primary);
   border: none;
   cursor: default;
-  height: 18px;
+  height: 19px;
   outline: none;
-  padding: 1px;
+  padding: 0 16px 0px 10px;
   font-size: 10px;
   font-family: "Open Sans", sans-serif;
   white-space: nowrap;
   align-items: center;
-  border-radius: 16px;
+  border-radius: 0px 16px 0px 20px;
   vertical-align: middle;
   text-decoration: none;
   justify-content: center;
@@ -499,14 +507,13 @@ input[type="checkbox"] {
   padding-right: 2px;
 }
 .modal-pattern-image {
-  width: 55%;
-  margin-left: 11%;
+  width: 60%;
+  margin: auto;
+  display: flex;
   object-fit: contain;
-  position: absolute;
-  border-radius: 15px;
-  padding-bottom: 0px;
 }
 .modal-pattern-id {
+  color:var(--color-secondary-dark);
   position: absolute;
 	bottom: 0;
 	font-size: 8px;
