--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -30,10 +30,13 @@ img {
 	// width: 100%;
 }
 
-h1 strong, h2 strong {
+h1, h2 strong {
 	font-weight: 700;
 }
-
+strong, em, span {
+	font-weight: 700;
+	color:var(--color-secondary-dark)
+}
 h1 {
 	font-weight: 300;
 	font-size: 2.3em;
